# antclaw

./: LICENSE  README.md  pyproject.toml  test_antclaw.py
.github/workflows/: cd.yml  ci.yml
antclaw/: __init__.py  cli.py  scanner.py  server.py  setup_wizard.py
antclaw/adapters/: openclaw.py
antclaw/core/: acp.py  channel.py  session.py
antclaw/extended/: canvas.py  correlator.py  credential_leak.py  data_classifier.py  destructive_action.py  indirect_injection.py  memory_poison.py  pairing_bypass.py  rate_anomaly.py  tool_sequence.py
anticlaw/: scanner.py  server.py
anticlaw/adapters/: openclaw.py
anticlaw/core/: channel.py  session.py
anticlaw/extended/: canvas.py  correlator.py  pairing_bypass.py
examples/: openclaw_example.py
scripts/: generate_reports.py  post_deploy.py  pre_deploy.py
test/: antclaw.py
