[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antclaw"
version = "0.0.1"
description = "Prompt injection and inter-agent attack detection for OpenClaw"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["prompt-injection", "security", "llm", "agents", "openclaw"]

dependencies = [
    "anticipator>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]
anticipator = ["anticipator>=1.0.2"]

[project.scripts]
antclaw        = "antclaw.cli:main"
antclaw-server = "antclaw.server:main"
antclaw-setup  = "antclaw.setup_wizard:main"
antclaw-report = "scripts.generate_reports:main"

[project.urls]
Homepage   = "https://github.com/anticipatorai/antclaw"
Issues     = "https://github.com/anticipatorai/antclaw/issues"
Repository = "https://github.com/anticipatorai/antclaw"

# ──────────────────────────────────────────────────────────────────────────────
# Tool config
# ──────────────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["antclaw"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]